@@ -1,3 +1,10 @@
+2007-05-03  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* win/makefile.vc: Round of updating to synch up with the Tcl
+	* win/rules.vc:    core version of this build system.
+	* win/nmakehlp.c:
+	* win/sample.rc:   Added sample resource file.
+
 2007-02-09  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* Makefile.in, configure.in (CLEANFILES): correct cleanup handling
